
Revision 0.3.3, released XX-03-2018
-----------------------------------

- Support 'S' for seconds in log rotation syntax

Revision 0.3.2, released 07-03-2018
-----------------------------------

- Copyright notice extended to the year 2018
- Fixed crash in log formatting routine
- Fixed bug in key aliasing in logging

Revision 0.3.1, released 22-12-2017
-----------------------------------

- HMAC-SHA-2 authentication and strong AES encryption protocols
  support added
- The pycryptodome dependency replaced with pycryptodomex as
  it is recommended by the upstream to avoid unwanted interference
- Migrated references from SourceForge
- Fixed crash during TRAPv1 handling at the server part
- Sphinx docs layout updated

Revision 0.2.2, released 04-07-2017
-----------------------------------

- GETBULK PDU support added to the oidfilter plugin
- Two-digit subsecond precision implemented across all logs
- Unique, system-wide request identifier implemented under the name
  of callflow-id
- System logging reworked for uniformity and usability
- Fix to catch errors coming from SNMP engine when sending malformed
  message SNMP
- Fix to snmp-peer-timeout option documentation and examples
- Fix to the server to handle the case of missing response PDU
  coming from client

Revision 0.2.1, released 28-05-2017
-----------------------------------

- Built-in logging at different verbosity levels implemented
  (via new --log-level option)
- Log SNMP authentication failures
- Optionally log denied OIDs at the oidfilter plugin
- Added timestamping to file log
- The plugin-options setting fixed to support a list of options,
  as its name suggests
- Fixed malformed timestamp logging at the logger plugin

Revision 0.2.0, released 16-05-2017
-----------------------------------

- Server message classifiers made available at the client side
  for message routing purposes
- Trunk keep-alive service implemented
- Client-side plugins support implemented